[gd_scene load_steps=12 format=3 uid="uid://docnyp7cxuxsc"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_s1jp4"]
[ext_resource type="Texture2D" uid="uid://dkvxhjafrxs7i" path="res://Assets/ghostly-tileset.png" id="2_5j454"]
[ext_resource type="FontFile" uid="uid://ulu7kgqxb12r" path="res://Assets/Fonts/LoSumires-2X8l.ttf" id="2_tmh54"]
[ext_resource type="Texture2D" uid="uid://b1j50nmg58g4r" path="res://Assets/pickup_tileset.png" id="4_n52a2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xdvef"]
shadow_color = Color(0, 0, 0, 0.501961)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t5gvl"]
bg_color = Color(0.380392, 0.0313726, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak6qm"]
atlas = ExtResource("2_5j454")
region = Rect2(456, 40, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_jy8ka"]
font = ExtResource("2_tmh54")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_co7ax"]
bg_color = Color(0.498039, 0.498039, 0.498039, 0.392157)

[sub_resource type="AtlasTexture" id="AtlasTexture_eex5e"]
atlas = ExtResource("4_n52a2")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ad2w"]
atlas = ExtResource("2_5j454")
region = Rect2(224, 576, 64, 64)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_s1jp4")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 7)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_xdvef")
theme_override_styles/fill = SubResource("StyleBoxFlat_t5gvl")
value = 50.0
show_percentage = false

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = -1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
size_flags_stretch_ratio = 10.0
texture = SubResource("AtlasTexture_ak6qm")

[node name="CoinCount" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.705882, 0.603922, 0, 1)
theme_override_fonts/font = ExtResource("2_tmh54")
text = "XX"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="PickupMessage" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_jy8ka")
vertical_alignment = 2

[node name="SwingTimerLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_tmh54")
text = "5
"

[node name="BusterSwordPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_co7ax")

[node name="BusterSword" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/BusterSwordPanel"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = SubResource("AtlasTexture_eex5e")

[node name="ScreenTransition" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="JaneContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -45.5
offset_right = 32.0
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2

[node name="JaneShadow" type="TextureRect" parent="JaneContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = SubResource("AtlasTexture_4ad2w")

[node name="Jane?" type="Label" parent="JaneContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tmh54")
text = "Jane...?"
horizontal_alignment = 1

[node name="JANE!?" type="Label" parent="JaneContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tmh54")
text = "JANE!?"
horizontal_alignment = 1

[node name="ScreenTransition2" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
